# solverforge-mail

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  PRD.md  README.md  fix-all-accounts.sh  setup-accounts.sh  setup-blinkenshell.sh  setup-common.sh  setup-icloud.sh  setup-oauth.sh  setup-password-account.sh  setup.py  store-passwords.sh  test-loading.rs
.github/workflows/: ci.yml
src/: app.rs  compose.rs  compose_editor.rs  contact_edit.rs  contacts.rs  credentials.rs  db.rs  event.rs  identities.rs  identity_edit.rs  import.rs  keys.rs  lib.rs  main.rs  setup.rs  theme.rs  worker.rs
src/himalaya/: client.rs  config.rs  diagnostics.rs  mod.rs  types.rs
src/mail/: account_store.rs  errors.rs  himalaya.rs  maildir.rs  mod.rs  service.rs  types.rs
src/ui/: account_list.rs  action_bar.rs  compose.rs  contact_edit.rs  contacts.rs  envelope_list.rs  folder_list.rs  help.rs  identity_edit.rs  identity_list.rs  message_view.rs  mod.rs  move_prompt.rs  search.rs  status_bar.rs  util.rs
tests/: app_test.rs  compose_input_router_test.rs  himalaya_client_test.rs  himalaya_types_test.rs  keys_test.rs  theme_test.rs
tests/fixtures/: accounts.json  colors.toml  envelopes.json  folders.json  message.txt
