[package]
name = "solverforge-mail"
version = "0.1.0"
edition = "2021"
description = "A spiffy ratatui TUI email client wrapping himalaya"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "6"
unicode-width = "0.2"

[dev-dependencies]
pretty_assertions = "1"
