[package]
name = "solverforge-mail"
version = "0.1.62"
edition = "2021"
description = "A spiffy ratatui TUI email client wrapping himalaya"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
unicode-width = "0.2"
regex = "1"
# Phase 1: Credential + address store
rusqlite = { version = "0.38", features = ["bundled"] }
# Phase 2: Email-first compose editor
tui-textarea = { version = "0.7.0", features = ["search"] }

[dev-dependencies]
pretty_assertions = "1"
